<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center">

    <ImageView android:id="@+id/iv_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="0.5"
        android:contentDescription="@string/iv_app_logo_content_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.5">

        <EditText android:id="@+id/et_sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="#b73e3b3b"
            android:singleLine="true"/>

        <EditText android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/sign_up_password_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:fontFamily="sans-serif"
            android:singleLine="true"/>

        <EditText android:id="@+id/et_sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:fontFamily="sans-serif"
            android:singleLine="true"/>

        <EditText android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_hint"
            android:selectAllOnFocus="true"
            android:inputType="textEmailAddress"/>

        <Button android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_create_account"
            android:textAllCaps="false"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>